# 3DShow

./: CMakeLists.txt  Open3D_Show.py  README.md
Open3d/: Open3D_Show.py  open3d_visualization_withKeyCallBack.py
data/pred_res/: 1608105580022.txt  1608105580122.txt  1608105580222.txt  1608105580322.txt  1608105580422.txt  1608105580522.txt  1608105580622.txt  1608105580722.txt  1608105580822.txt  1608105580922.txt
data/test_pcds/: 1608105580022.pcd  1608105580122.pcd  1608105580222.pcd  1608105580322.pcd  1608105580422.pcd  1608105580522.pcd  1608105580622.pcd  1608105580722.pcd  1608105580822.pcd  1608105580922.pcd
src/: bin2pcd.cpp  frames_show.cpp  one_frame_show.cpp  pcd2bin.cpp  test_pcd_load.cpp
tools/: bin2pcd.py  pcd2bin.py
